Ver 0.3.2 - First commit to GitHub

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -77,3 +77,46 @@ body {
     border-bottom: 0;
   }
 }
+
+
+/* Personal Styles */
+
+.mainContainer {
+  padding: 5px;
+  width: 100%;
+  background-color: #bdc3c7;
+}
+
+.canvasContainer {
+  width: 100%;
+  margin: 0 auto;
+}
+
+canvas {
+  border-radius: 5px;
+  cursor: crosshair;
+  background-color: white;
+  touch-action: none;
+}
+
+.toolbox {
+  border-style: solid;
+  border-radius: 5px;
+  border-color: white;
+}
+
+.toolset ul {
+  margin: 0px;
+  padding: 0px;
+}
+
+.toolset li {
+  display: inline-block;
+  padding: 2px 5px;
+}
+
+.toolset a {
+  text-decoration: none;
+  color: white;
+}
+
