--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,21 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div id="d" data-ng-init="init()">
+  <div class="mainContainer">
+      <div id="canvasContainer" class="canvasContainer">
+        <canvas id="canvas">
+          Your browser does not support the canvas element.
+        </canvas>
+      </div>
+      <div class="toolbox">
+        <div class="toolset">
+          <ul>
+            <li><a href="" ng-click="tool = 'pencil'" class="pencil"> Pencil </a> </li>
+          <li><a href="" ng-click="tool = 'line'" class="line"> Line </a> </li>
+          <li><a href="" ng-click="tool = 'rectangle'" class="rectangle"> Rectangle </a></li>
+          <li><a href="" ng-click="tool = 'circle'" class="circle"> Circle </a></li>
+              <li><a href="" ng-click="undo()" class="undo"> Undo </a></li>
+              <li><a href="" ng-click="resetCanvas()" class="reset"> Reset </a></li>
+          </ul>
+        </div>
+      </div>
+  </div>
 </div>
