Ver. 0.4.5 - Draw Manager Service
Now the drawing in doing by the Draw Manager.

New:
- Draw Manager.
- Ignore .idea folder.

Changes:
- The evaluation of filled is now simpler.
- $scope.resetCanvas() --> $scope.resetDraw().
- startDrawing() --> startDrawing($scope.shape)

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,7 +14,7 @@
             <li><a href="" ng-click="shape.tool = 'circle'" class="circle"> Circle </a></li>
             <ul>
               <li><a href="" ng-click="undo()" class="undo"> Undo </a></li>
-              <li><a href="" ng-click="resetCanvas()" class="reset"> Reset </a></li>
+              <li><a href="" ng-click="resetDraw()" class="reset"> Reset </a></li>
             </ul>
             <ul>
               <li><spectrum-colorpicker ng-model="shape.lineColor" options="{showAlpha: true}" format="'rgb'"></spectrum-colorpicker></li>
